<resources>
    <string name="app_name">ARS Track</string>
    <string name="ars_website">www.arstechnologies.in</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="lodgeNewComplaint">Lodge A New Complaint</string>
    <string name="Massage_Example">Lorem ipsum dolor sit amet. Est debitis blanditiis ad iusto praesentium es tempora eaque id ipsam dolorem ab commodi beatae eos possimus iure. Ut omnis aliquam a totam veniam aut ducimus quis aut vitae velit et molestiae temporibus! Est sint maiores ut pariatur quibusdam in sapiente esse. Et delectus omnis qui aliquam dolorem vel error saepe ut quos maxime qui quia quisquam qui error valuptatem sed dignissimos earum...
    </string>
    <string name="login"><u>Login</u></string>
    <string name="signUp"><u>Sign Up</u></string>
    <string name="search_by_category"><u> Search by category</u></string>
    <string name="temp_holder_text">Lorem ipsum dolor sit amet. Est debitis blanditiis ad iusto praesentium eos tempora eaque id ipsam dolorem ab commodi beatae eos possimus iure. Ut omnis aliquam a totam veniam aut ducimus quis aut vitae velit et molestiae temporibus! Est sint maiores ut pariatur quibusdam in sapiente esse. Et delectus omnis qui aliquam dolorem vel error saepe ut quos maxime qui quia quisquam qui error voluptatem sed dignissimos earum.</string>
    <string name="complaint_number_101">Complaint Number #101</string>
    <string name="product">Product:</string>
    <string name="hp_inkjet_printer">Hp InkJet Printer</string>
    <string name="contact">Contact:</string>
    <string name="_91_xxxxxxxxxx">+91 XXXXXXXXXX</string>
    <string name="message">Message:</string>
    <string name="status">Status:</string>
    <string name="response_pending">Response Pending</string>
    <string name="back">Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login_screen">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="ars">ARS</string>
    <string name="technologies">Technologies</string>
    <string name="services">Services</string>
    <string name="request_help_from_us">Request help from us</string>
    <string name="products">Products</string>
    <string name="products_we_offer">Products we offer</string>
    <string name="frequently_ordered_products">Frequently ordered products</string>
    <string name="product_name">Product Name</string>
    <string name="details"><![CDATA[Details >]]></string>
    <string name="product_name_main">Product Name</string>
    <string name="details_main"><![CDATA[Details >]]></string>
    <string name="todo_main">TODO</string>
    <string name="complaint_number_101_complain">Complaint Number #101</string>
    <string name="select_group">Select Group</string>
    <string name="select_category">Select Category</string>
    <string name="select_product">Select Product</string>
    <string name="select_problem">Select Problem</string>
    <string name="_complain">Message</string>
    <string name="add_new_complaint">Add New Complaint</string>
    <string name="product_name_product">Product Name</string>
    <string name="available_stock_05">Available stock: 05</string>
    <string name="description">Description:</string>
    <string name="get_quotation">Get Quotation</string>
    <string name="search_for_products">Search for products</string>
    <string name="select_product_category">Select Product Category</string>
    <string name="product_category">Product Category</string>
    <string name="product_details">Product Details</string>
    <string name="product_details_repair">Product Details</string>
    <string name="brand_details">Brand Details</string>
    <string name="eg_toshiba_zebra_etc">eg: Toshiba, Zebra, etc</string>
    <string name="select_problem_repair">Select Problem</string>
    <string name="problem">Problem</string>
    <string name="message_repair">Message</string>
    <string name="click_to_proceed">Click To Proceed</string>
    <string name="complaints">Complaints</string>
    <string name="write_a_complaint_to_us">Write a complaint to us</string>
    <string name="repairing">Repairing</string>
    <string name="ask_for_repairing">Ask for repairing</string>
    <string name="warranty">Warranty</string>
    <string name="check_for_warranty">Check for warranty</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password_sign">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="check_for_warranty_warranty">Check for warranty</string>
    <string name="serial_number">Serial Number</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="search">Search</string>
    <string name="serial_number_warranty">Serial Number:</string>
    <string name="product_warranty">Product:</string>
    <string name="description_warranty">Description:</string>
    <string name="installed_on">Installed on:</string>
    <string name="warranty_valid_till">Warranty valid till:</string>
    <string name="_196826542">196826542</string>
    <string name="name_of_the_product">Name of the Product</string>
    <string name="model_number_etc">Model Number etc . .</string>
    <string name="_01_01_2023">01/01/2023</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="complaint_number_001">Complaint number #001</string>
    <string name="response_pending_complaint_customer">Response Pending</string>
    <string name="details_customer">Details</string>
    <string name="ars_technologies">ARS Technologies</string>
    <string name="product_name_product_item">Product Name</string>
    <string name="details_product_item"><![CDATA[Details >]]></string>

</resources>